force-app/main/default/objects/Province_Save_State__c/Province_Save_State__c.object-meta.xml
<CustomObject>
    <label>Province Save State</label>
    <pluralLabel>Province Save States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Province Save State Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>