force-app/main/default/objects/Province_Save_State__c/fields/Building_construction__c.field-meta.xml
<CustomField>
    <fullName>Building_construction__c</fullName>
    <label>Building construction</label>
    <type>Lookup</type>
    <referenceTo>Construction__c</referenceTo>
    <relationshipName>Province_Save_State_Building_construction</relationshipName>
</CustomField>