force-app/main/default/objects/Province_Save_State__c/fields/Colonial__c.field-meta.xml
<CustomField>
    <fullName>Colonial__c</fullName>
    <label>Colonial</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>