force-app/main/default/objects/Province_Save_State__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <label>Controller</label>
    <type>Text</type>
    <length>255</length>
</CustomField>