force-app/main/default/objects/Province_Save_State__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <label>Core</label>
    <type>Text</type>
    <length>255</length>
</CustomField>