force-app/main/default/objects/Province_Save_State__c/fields/Garrison__c.field-meta.xml
<CustomField>
    <fullName>Garrison__c</fullName>
    <label>Garrison</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>