force-app/main/default/objects/Province_Save_State__c/fields/Last_controller_change__c.field-meta.xml
<CustomField>
    <fullName>Last_controller_change__c</fullName>
    <label>Last controller change</label>
    <type>Text</type>
    <length>255</length>
</CustomField>