force-app/main/default/objects/Province_Save_State__c/fields/Last_imigration__c.field-meta.xml
<CustomField>
    <fullName>Last_imigration__c</fullName>
    <label>Last imigration</label>
    <type>Text</type>
    <length>255</length>
</CustomField>