force-app/main/default/objects/Province_Save_State__c/fields/Life_rating__c.field-meta.xml
<CustomField>
    <fullName>Life_rating__c</fullName>
    <label>Life rating</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>