force-app/main/default/objects/Province_Save_State__c/fields/Nationalism__c.field-meta.xml
<CustomField>
    <fullName>Nationalism__c</fullName>
    <label>Nationalism</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>