force-app/main/default/objects/Province_Save_State__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Text</type>
    <length>255</length>
</CustomField>