force-app/main/default/objects/Province_Save_State__c/fields/Rgo__c.field-meta.xml
<CustomField>
    <fullName>Rgo__c</fullName>
    <label>Rgo</label>
    <type>Lookup</type>
    <referenceTo>RGO__c</referenceTo>
    <relationshipName>Province_Save_State_Rgo</relationshipName>
</CustomField>